--- a/foodie/templates/foodie/base.html
+++ b/foodie/templates/foodie/base.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div class="page-header">
-            
-            <h1><a href="/">Foodie</a></h1>
+            <h1><a class="nav" href="/">Foodie</a></h1>
+            <a class="nav" href="{% url 'newRecipe' %}">New</a>
         </div>
 
         <div class="content">
